--- a/mars-ana/marl-训练&验证&测试.ipynb
+++ b/mars-ana/marl-训练&验证&测试.ipynb
@@ -2,7 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
+   "id": "romantic-oriental",
    "metadata": {},
    "outputs": [
     {
@@ -16,9 +17,11 @@
    "source": [
     "from __future__ import print_function\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
-    "InteractiveShell.ast_node_interactivity='last_expr'\n",
+    "InteractiveShell.ast_node_interactivity='all'\n",
+    "# InteractiveShell.ast_node_interactivity='last_expr'\n",
     "\n",
     "from matplotlib import pyplot as plt\n",
+    "plt.style.use(['science','no-latex','grid','high-contrast']) # high-contrast指的是配色的选取\n",
     "%pylab inline\n",
     "\n",
     "# %load_ext autoreload\n",
@@ -28,18 +31,18 @@
     "pd.options.display.max_rows=5  # 设置dataframe最多的显示行数\n",
     "import os\n",
     "import os.path as osp\n",
-    "\n",
     "import sys\n",
     "if os.getcwd() not in sys.path:\n",
     "    sys.path.append(os.getcwd())\n",
     "    print(f\"After inserting, sys.path is {sys.path}\")\n",
-    "    \n",
+    "\n",
     "from collections import defaultdict"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "positive-luxembourg",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,6 +59,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "figured-habitat",
    "metadata": {},
    "source": [
     "# analysis results from valid.sh"
@@ -64,6 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
+   "id": "blank-chambers",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,6 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
+   "id": "excited-response",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,6 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
+   "id": "manufactured-familiar",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,6 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
+   "id": "favorite-correction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,6 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
+   "id": "sharp-insight",
    "metadata": {},
    "outputs": [
     {
@@ -176,6 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "sublime-poetry",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,6 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
+   "id": "thirty-charger",
    "metadata": {},
    "outputs": [
     {
@@ -231,6 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
+   "id": "suffering-residence",
    "metadata": {},
    "outputs": [
     {
@@ -250,6 +262,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "dated-gibraltar",
    "metadata": {},
    "source": [
     "len(means_pr)"
@@ -258,6 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
+   "id": "acceptable-dakota",
    "metadata": {},
    "outputs": [
     {
@@ -278,6 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
+   "id": "prescription-pendant",
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -563,6 +578,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "broadband-vienna",
    "metadata": {},
    "source": [
     "## 可视化训练图"
@@ -570,6 +586,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "interior-auction",
    "metadata": {},
    "source": [
     "可以用来快速可视化一下，子图越多，可视化效果越差"
@@ -578,6 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
+   "id": "instrumental-account",
    "metadata": {},
    "outputs": [
     {
@@ -625,6 +643,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "neural-muscle",
    "metadata": {},
    "source": [
     "# 查看test结果"
@@ -632,6 +651,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "coordinate-perry",
    "metadata": {},
    "source": [
     "## GEA"
@@ -640,6 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
+   "id": "original-andrew",
    "metadata": {},
    "outputs": [
     {
@@ -662,6 +683,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
+   "id": "respective-advice",
    "metadata": {},
    "outputs": [
     {
@@ -683,6 +705,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "standing-chest",
    "metadata": {},
    "source": [
     "# backup codes"
@@ -690,6 +713,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "inside-medicine",
    "metadata": {},
    "source": [
     "## 断点续上训练"
@@ -698,6 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": 173,
+   "id": "minute-islam",
    "metadata": {},
    "outputs": [
     {
@@ -740,6 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "expensive-theology",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -770,7 +796,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
