--- a/mars-ana/ns3-dataAnalysis.ipynb
+++ b/mars-ana/ns3-dataAnalysis.ipynb
@@ -1,6 +1,44 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Populating the interactive namespace from numpy and matplotlib\n"
+     ]
+    }
+   ],
+   "source": [
+    "from __future__ import print_function\n",
+    "from IPython.core.interactiveshell import InteractiveShell\n",
+    "InteractiveShell.ast_node_interactivity='all'\n",
+    "# InteractiveShell.ast_node_interactivity='last_expr'\n",
+    "\n",
+    "from matplotlib import pyplot as plt\n",
+    "plt.style.use(['science','no-latex','grid','high-contrast']) # high-contrast指的是配色的选取\n",
+    "%pylab inline\n",
+    "\n",
+    "# %load_ext autoreload\n",
+    "# %autoreload 2\n",
+    "import numpy as np\n",
+    "import pandas as pd \n",
+    "pd.options.display.max_rows=5  # 设置dataframe最多的显示行数\n",
+    "import os\n",
+    "import os.path as osp\n",
+    "import sys\n",
+    "if os.getcwd() not in sys.path:\n",
+    "    sys.path.append(os.getcwd())\n",
+    "    print(f\"After inserting, sys.path is {sys.path}\")\n",
+    "\n",
+    "from collections import defaultdict"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -37,10 +75,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd \n",
-    "import numpy as np\n",
-    "from matplotlib import pyplot as plt\n",
-    "\n",
     "datas_ospf = [None]*len(file_list) # datas[i]包含 ( node*(node-1) , timestep ) 维度的数据 ( i是观测属性index，比如util )\n",
     "# 从每个观测属性中提取的统计数据 -- 现在只需要50%分位 以及 90%分位 ; describes[i] 包含[\"0.5\": ... ; \"0.9\": ...] 的DataFrame\n",
     "describes_ospf =[] # 每一行是一个时间点\n",
@@ -880,7 +914,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.10"
   },
   "toc-autonumbering": true
  },
