--- a/pythonDemo/demo-JupyterConfig,Matplotlib.ipynb.ipynb
+++ b/pythonDemo/demo-JupyterConfig,Matplotlib.ipynb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "infinite-coordinate",
+   "id": "invisible-repeat",
    "metadata": {},
    "source": [
     "# config Settings\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "raising-syria",
+   "id": "enabling-athletics",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-info\">\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sustainable-monte",
+   "id": "ancient-accident",
    "metadata": {},
    "source": [
     "## jupyter notebook theme"
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "economic-captain",
+   "id": "statistical-assessment",
    "metadata": {},
    "source": [
     "jt -t monokai -f firacode -cellw 95% -fs 10 -tf fira -tfs 8 -nf firacode -nfs 8 -dfs 8 -lineh 120 -T  # set to be sublime alike style"
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "recovered-child",
+   "id": "about-cherry",
    "metadata": {},
    "source": [
     "## basic \n",
@@ -48,8 +48,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "special-uganda",
+   "execution_count": 37,
+   "id": "simple-toolbox",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-11-02T18:11:44.762748Z",
@@ -68,7 +68,8 @@
    "source": [
     "from __future__ import print_function\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
-    "# InteractiveShell.ast_node_interactivity='all'\n",
+    "InteractiveShell.ast_node_interactivity='all'\n",
+    "# InteractiveShell.ast_node_interactivity='last_expr'\n",
     "\n",
     "from matplotlib import pyplot as plt\n",
     "plt.style.use(['science','no-latex','grid','high-contrast']) # high-contrast指的是配色的选取\n",
@@ -80,15 +81,18 @@
     "import pandas as pd \n",
     "pd.options.display.max_rows=5  # 设置dataframe最多的显示行数\n",
     "import os\n",
+    "from os import path as osp\n",
     "import sys\n",
     "if os.getcwd() not in sys.path:\n",
     "    sys.path.append(os.getcwd())\n",
-    "    print(f\"After inserting, sys.path is {sys.path}\")"
+    "    print(f\"After inserting, sys.path is {sys.path}\")\n",
+    "    \n",
+    "from collections import defaultdict"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "voluntary-caution",
+   "id": "executed-ghost",
    "metadata": {},
    "source": [
     "## Trivial"
@@ -97,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "acknowledged-thirty",
+   "id": "valid-hygiene",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-11-27T12:28:11.253702Z",
@@ -126,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "commercial-living",
+   "id": "criminal-briefs",
    "metadata": {},
    "source": [
     "-----"
@@ -134,7 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "polar-third",
+   "id": "several-theater",
    "metadata": {},
    "source": [
     "# 画图"
@@ -142,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "valued-design",
+   "id": "amateur-characterization",
    "metadata": {},
    "source": [
     "## matplotlib"
@@ -150,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ceramic-compensation",
+   "id": "occasional-fitness",
    "metadata": {},
    "source": [
     "### reference\n",
@@ -163,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "magnetic-privacy",
+   "id": "integrated-comedy",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-11-02T18:13:27.787711Z",
@@ -177,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "smoking-student",
+   "id": "american-government",
    "metadata": {},
    "source": [
     "#### SciencePlots已经够用"
@@ -185,7 +189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "spectacular-period",
+   "id": "political-garbage",
    "metadata": {},
    "source": [
     "就是要确保 Times New Roman字体可用，具体教程可以看[Hesy:论文写作相关 目录](https://blog.csdn.net/Hesy_H/article/details/109104483)"
@@ -193,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "freelance-client",
+   "id": "premier-cookie",
    "metadata": {},
    "source": [
     "with结构，脱离于全局，仅使用一次，不影响全局设置"
@@ -202,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "animated-tiffany",
+   "id": "hairy-summit",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "forced-opportunity",
+   "id": "historic-cable",
    "metadata": {},
    "source": [
     "for both ax and plt API，it works well."
@@ -237,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "productive-province",
+   "id": "charged-trial",
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "friendly-chosen",
+   "id": "extended-acting",
    "metadata": {},
    "source": [
     "#### 进一步精细的调整"
@@ -282,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "soviet-tooth",
+   "id": "overhead-mileage",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-11-02T18:22:05.444914Z",
@@ -369,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adolescent-oxford",
+   "id": "sealed-windsor",
    "metadata": {},
    "source": [
     "### 双y轴画法"
@@ -378,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "pharmaceutical-credit",
+   "id": "adult-score",
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +428,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "labeled-wagner",
+   "id": "renewable-atlas",
    "metadata": {},
    "source": [
     "### bar 柱状图"
@@ -432,7 +436,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "becoming-mason",
+   "id": "impressed-blank",
    "metadata": {},
    "source": [
     "数据制造"
@@ -441,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "sitting-bacon",
+   "id": "flexible-batman",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "acute-google",
+   "id": "meaningful-racing",
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +543,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "endless-mandate",
+   "id": "outstanding-phoenix",
    "metadata": {},
    "source": [
     "处理横轴的位置"
@@ -548,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "opposite-coast",
+   "id": "bronze-construction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "filled-wheel",
+   "id": "covered-photograph",
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +615,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "virtual-gamma",
+   "id": "excellent-vegetable",
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +641,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "geological-nashville",
+   "id": "destroyed-maryland",
    "metadata": {},
    "source": [
     "<br><br><br>\n",
@@ -648,7 +652,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "documentary-debut",
+   "id": "capable-importance",
    "metadata": {},
    "source": [
     "## seaborn"
@@ -657,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "native-bradley",
+   "id": "endless-expense",
    "metadata": {},
    "outputs": [
     {
