--- a/pythonDemo/demo-JupyterConfig,Matplotlib.ipynb
+++ b/pythonDemo/demo-JupyterConfig,Matplotlib.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "durable-allowance",
+   "id": "lesser-contributor",
    "metadata": {},
    "source": [
     "# config Settings\n",
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "underlying-serum",
+   "id": "private-official",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "stuck-david",
+   "id": "korean-crossing",
    "metadata": {},
    "source": [
     "## jupyter notebook theme"
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "imposed-syndication",
+   "id": "alike-praise",
    "metadata": {},
    "source": [
     "jt -t monokai -f firacode -cellw 95% -fs 10 -tf fira -tfs 8 -nf firacode -nfs 8 -dfs 8 -lineh 120 -T  # set to be sublime alike style"
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "designed-manitoba",
+   "id": "remarkable-science",
    "metadata": {},
    "source": [
     "## basic \n",
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "reliable-romania",
+   "id": "awful-violence",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-11-02T18:11:44.762748Z",
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "armed-pierce",
+   "id": "functional-dictionary",
    "metadata": {},
    "source": [
     "## Trivial"
@@ -104,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "outer-pulse",
+   "id": "inappropriate-arthur",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-11-27T12:28:11.253702Z",
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "amino-cologne",
+   "id": "fourth-genesis",
    "metadata": {},
    "source": [
     "-----"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "complete-group",
+   "id": "weighted-bankruptcy",
    "metadata": {},
    "source": [
     "# 画图"
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "verified-banana",
+   "id": "sudden-fundamental",
    "metadata": {},
    "source": [
     "## matplotlib"
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "proof-timer",
+   "id": "interested-spread",
    "metadata": {},
    "source": [
     "### reference\n",
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "specific-flooring",
+   "id": "generous-brook",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-11-02T18:13:27.787711Z",
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aging-tuesday",
+   "id": "disabled-bidder",
    "metadata": {},
    "source": [
     "#### SciencePlots已经够用"
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "incident-homework",
+   "id": "behavioral-consumption",
    "metadata": {},
    "source": [
     "就是要确保 Times New Roman字体可用，具体教程可以看[Hesy:论文写作相关 目录](https://blog.csdn.net/Hesy_H/article/details/109104483)"
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "million-scope",
+   "id": "sonic-exclusive",
    "metadata": {},
    "source": [
     "with结构，脱离于全局，仅使用一次，不影响全局设置"
@@ -209,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "introductory-production",
+   "id": "brown-imagination",
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cloudy-madrid",
+   "id": "cardiac-preliminary",
    "metadata": {},
    "source": [
     "for both ax and plt API，it works well."
@@ -244,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "equal-output",
+   "id": "changing-acting",
    "metadata": {},
    "outputs": [
     {
@@ -280,16 +280,110 @@
   },
   {
    "cell_type": "markdown",
-   "id": "solved-harrison",
+   "id": "reduced-batman",
    "metadata": {},
    "source": [
     "#### 进一步精细的调整"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "academic-truth",
+   "metadata": {},
+   "source": [
+    "固定常用的颜色和形状"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "supposed-identification",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "paper_colors = ['steelblue','brown','darkorange']\n",
+    "paper_shapes = ['.','v','+']\n",
+    "paper_shapes = ['.','d','+']\n",
+    "paper_shapes = ['.','d','x']\n",
+    "paper_shapes = ['.','P','v']\n",
+    "paper_shapes = ['o','P','v']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "committed-academy",
+   "metadata": {},
+   "source": [
+    "调整图片大小"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "beneficial-boutique",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(figsize=(8,4))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "indoor-ordinance",
+   "metadata": {},
+   "source": [
+    "控制ticks大小"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "alpine-singapore",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 双ax的画法\n",
+    "ax[0].tick_params(axis='both', labelsize=13 ) # axis取值有 'x','y','both',默认是both\n",
+    "ax[1].tick_params(axis='both', labelsize=13 )\n",
+    "\n",
+    "# 单个plot的画法\n",
+    "plt.tick_params(labelsize=13)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "latin-applicant",
+   "metadata": {},
+   "source": [
+    "控制legend和label的大小，直接在绘制的时候设置fontsize为xx即可"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "modular-compact",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ax的画法\n",
+    "ax[0].set_xlabel(\"TE with shorter control loop delay\",fontsize=13)\n",
+    "\n",
+    "# 用plot的画法\n",
+    "plt.xlabel(\"xxx\",fontsize=13)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "gothic-secretary",
+   "metadata": {},
+   "source": [
+    "大集合ax[0].set_xlabel(\"TE with shorter control loop delay\",fontsize=13)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "historic-compilation",
+   "id": "intensive-platinum",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-11-02T18:22:05.444914Z",
@@ -376,7 +470,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "three-portal",
+   "id": "advisory-mining",
    "metadata": {},
    "source": [
     "### 双y轴画法"
@@ -385,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "obvious-friendship",
+   "id": "everyday-doctor",
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "accepting-macro",
+   "id": "loose-junior",
    "metadata": {},
    "source": [
     "### bar 柱状图"
@@ -439,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "chubby-jones",
+   "id": "directed-custom",
    "metadata": {},
    "source": [
     "数据制造"
@@ -448,7 +542,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "described-hampshire",
+   "id": "theoretical-employment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "greenhouse-telescope",
+   "id": "usual-lawyer",
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +640,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "collective-campus",
+   "id": "adjacent-documentation",
    "metadata": {},
    "source": [
     "处理横轴的位置"
@@ -555,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "monthly-bangkok",
+   "id": "rocky-blake",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "specified-terminology",
+   "id": "republican-stock",
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "exact-matthew",
+   "id": "exotic-stamp",
    "metadata": {},
    "outputs": [
     {
@@ -797,7 +891,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "polyphonic-rebecca",
+   "id": "composed-thought",
    "metadata": {},
    "source": [
     "### 曲线堆积图"
@@ -805,7 +899,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "documentary-tomorrow",
+   "id": "durable-corporation",
    "metadata": {},
    "source": [
     "data preparation"
@@ -814,7 +908,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "greek-bargain",
+   "id": "cathedral-sierra",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -847,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "local-metallic",
+   "id": "plastic-milwaukee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -862,7 +956,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "baking-scratch",
+   "id": "injured-passenger",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -874,7 +968,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "controversial-violation",
+   "id": "active-therapist",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +979,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "express-parks",
+   "id": "future-scanning",
    "metadata": {},
    "source": [
     "plot logic"
@@ -894,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "instructional-radical",
+   "id": "solved-source",
    "metadata": {},
    "outputs": [
     {
@@ -918,7 +1012,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sound-mobile",
+   "id": "infectious-victory",
    "metadata": {},
    "source": [
     "<br><br><br>\n",
@@ -929,7 +1023,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "through-pride",
+   "id": "chicken-queens",
    "metadata": {},
    "source": [
     "## seaborn"
@@ -938,7 +1032,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ethical-treat",
+   "id": "broken-treatment",
    "metadata": {},
    "outputs": [
     {
