--- a/mars-ana/marl-训练&验证&测试.ipynb
+++ b/mars-ana/marl-训练&验证&测试.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "romantic-oriental",
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +41,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "positive-luxembourg",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +57,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "figured-habitat",
    "metadata": {},
    "source": [
     "# analysis results from valid.sh"
@@ -68,7 +65,6 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "blank-chambers",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,89 +78,62 @@
     "\n",
     "    print(f\"save in to {resPathDir}/modelIndex.txt\")\n",
     "    with open( osp.join(resPathDir,\"modelIndex.txt\") ,\"w\") as f:\n",
-    "        print(f\"{penalty} {seed} {mini_batch} {len_circle} {tm_circle} {explore_epochs} {epsilon_steps} {explore_decay} {ckpt_idx} {topoName} {expKind}\",file =f)\n",
-    "        \"\"\"\n",
-    "        print(f\"seed {seed}\")\n",
-    "        print(f\"mini_batch {mini_batch}\")\n",
-    "        print(f\"len_circle {len_circle}\")\n",
-    "        print(f\"tm_circle {tm_circle}\")\n",
-    "        print(f\"explore_epochs {explore_epochs}\")\n",
-    "        print(f\"epsilon_steps {epsilon_steps}\")\n",
-    "        print(f\"explore_decay {explore_decay}\")\n",
-    "        print(f\"ckpt_idx {ckpt_idx}\")\n",
-    "        print(f\"topoName {topoName}\")\n",
-    "        print(f\"dim {expKind}\")\n",
-    "        \"\"\""
+    "        print(f\"{penalty} {seed} {mini_batch} {len_circle} {tm_circle} {explore_epochs} {epsilon_steps} {explore_decay} {ckpt_idx} {topoName} {expKind}\",file =f)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "excited-response",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# needs change\n",
+    "# hyper\n",
+    "seeds =[3,66,102]\n",
+    "# seeds =[66] # for fei's version\n",
+    "# mini_batchs =[16,64]    \n",
+    "mini_batchs =[32]  # for fei's version\n",
+    "len_circles =[10000]\n",
+    "tm_circles =[1]\n",
+    "explore_epochss=[0]\n",
+    "\n",
     "# parDir=\"/home/hesy/pro/mars/DRLTE/log_time_space_abi/validRes\"\n",
-    "parDir=\"/home/hesy/projects/mars/DRLTE_g5/log/validRes\"\n",
-    "true_exist_num=483\n",
-    "topoName=\"GEA\"\n",
-    "expKind=\"trueTM\""
+    "parDir=\"/home/hesy/projects/g1/pro/mars/para/log_single/log/validRes\"\n",
+    "topoName=\"Nine\"\n",
+    "maxModleNum=30\n",
+    "tag=\"-oriPath-oriTM\" \n",
+    "true_exist_num=483"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "manufactured-familiar",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# hyper\n",
-    "# seeds =[66] # for fei's version\n",
-    "# mini_batchs =[16,64]    \n",
-    "# len_circles =[100,1000]\n",
-    "# tm_circles =[5,10]\n",
-    "explore_epochss=[0,1]\n",
-    "seeds =[66,102]\n",
-    "mini_batchs =[32,64]  # for fei's version\n",
-    "len_circles =[1000]\n",
-    "tm_circles =[5]\n",
-    "explore_epochss=[1]\n",
-    "penaltys=[0.5,1.0,5.0,10.0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "id": "favorite-correction",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ${topoName}-${seed}-${mini_batch}-${len_circle}-${tm_circle}-${explore_epochs}-\\\n",
-    "# ${epsilon_steps}-\\\n",
-    "# ${explore_decay}-\\\n",
-    "# ${ckpt_idx}\n",
     "model_dirPaths=[]\n",
-    "for penalty in penaltys:\n",
-    "    for seed in seeds :\n",
-    "        for mini_batch in mini_batchs :\n",
-    "            for len_circle  in len_circles :\n",
-    "                for tm_circle in tm_circles :\n",
-    "                        for explore_epochs in explore_epochss :\n",
-    "                            # fei's version\n",
-    "                            dirName = f\"{topoName}-{expKind}-{penalty}-{seed}-{mini_batch}-{len_circle}-{tm_circle}-{explore_epochs if explore_epochs==0 else len_circle*tm_circle }-{9437 if explore_epochs==0 else 2700}-\"\n",
-    "    #                         dirName = f\"{topoName}-{seed}-{mini_batch}-{len_circle}-{tm_circle}-{explore_epochs if explore_epochs==0 else len_circle*tm_circle }-{9437 if explore_epochs==0 else 2700}-\"\n",
-    "                            if explore_epochs:\n",
-    "                                dirName += f\"{94 if len_circle*tm_circle==1000 else 189}\"  \n",
-    "                            else:\n",
-    "                                dirName += f\"{0}\"\n",
-    "                            model_dirPaths.append( osp.join( parDir,dirName)  )"
+    "for seed in seeds :\n",
+    "    for mini_batch in mini_batchs :\n",
+    "        for len_circle  in len_circles :\n",
+    "            for tm_circle in tm_circles :\n",
+    "                    for explore_epochs in explore_epochss :\n",
+    "                        # fei's version\n",
+    "                        dirName = f\"{topoName}-{seed}-{mini_batch}-{len_circle}-{tm_circle}-{explore_epochs if explore_epochs==0 else len_circle*tm_circle }-{9437 if explore_epochs==0 else 2700}-\"\n",
+    "#                         dirName = f\"{topoName}-{seed}-{mini_batch}-{len_circle}-{tm_circle}-{explore_epochs if explore_epochs==0 else len_circle*tm_circle }-{9437 if explore_epochs==0 else 2700}-\"\n",
+    "                        if explore_epochs:\n",
+    "                            dirName += f\"{94 if len_circle*tm_circle==1000 else 189}\"  \n",
+    "                        else:\n",
+    "                            dirName += f\"{0}\"\n",
+    "                        model_dirPaths.append( osp.join( parDir,dirName)  )\n",
+    "\n",
+    "lengths = len(model_dirPaths)\n",
+    "print(f\"len(model_dirPaths) is {lengths}\")\n",
+    "if lengths<10:\n",
+    "    print(f\"model_dirPaths is {model_dirPaths}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "sharp-insight",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +154,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sublime-poetry",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +163,6 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "thirty-charger",
    "metadata": {},
    "outputs": [
     {
@@ -216,14 +183,14 @@
     "       # 对于所有模型的所有迭代结果\n",
     "    min_pf ,min_index = 10 , \"\"    # 对于某个模型所有的迭代轮数的结果\n",
     "    # fei's version\n",
-    "    key = p.split(f'{expKind}')[-1][1:]\n",
+    "    key = p.split(f'{topoName}')[-1][1:]\n",
     "#     key = p.split(f'{topoName}')[-1][1:]\n",
     "    for modelIndex in range(1,41):\n",
-    "        path = p+f\"-{modelIndex}\"\n",
+    "        path = p+f\"-{modelIndex}\"+tag\n",
     "        \n",
     "        if osp.exists( path):\n",
     "            existNum+=1\n",
-    "            pf_mean, util_mean= mean(loadtxt( osp.join(path,\"perfm.log\") )),mean(loadtxt( osp.join(path,\"util.log\") ))\n",
+    "            pf_mean, util_mean= np.mean(np.loadtxt( osp.join(path,\"perfm.log\") )),np.mean(np.loadtxt( osp.join(path,\"util.log\") ))\n",
     "            means_pr[key][modelIndex], means_util[key][modelIndex]= pf_mean, util_mean\n",
     "\n",
     "            if min_pf> pf_mean :\n",
@@ -236,13 +203,12 @@
     "\n",
     "print(f\"existNum is {existNum}\")\n",
     "# assert existNum==true_exist_num, f\"wrong existNum of {existNum}\"\n",
-    "parseAndSave( min_index_all, topoName , expKind,parDir )"
+    "# parseAndSave( min_index_all, topoName , expKind,parDir )"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "suffering-residence",
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +228,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dated-gibraltar",
    "metadata": {},
    "source": [
     "len(means_pr)"
@@ -271,7 +236,6 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "acceptable-dakota",
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +256,6 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "prescription-pendant",
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -578,7 +541,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "broadband-vienna",
    "metadata": {},
    "source": [
     "## 可视化训练图"
@@ -586,7 +548,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "interior-auction",
    "metadata": {},
    "source": [
     "可以用来快速可视化一下，子图越多，可视化效果越差"
@@ -595,7 +556,6 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "instrumental-account",
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +603,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "neural-muscle",
    "metadata": {},
    "source": [
     "# 查看test结果"
@@ -651,7 +610,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "coordinate-perry",
    "metadata": {},
    "source": [
     "## GEA"
@@ -660,7 +618,6 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "original-andrew",
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +640,6 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "respective-advice",
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +661,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "standing-chest",
    "metadata": {},
    "source": [
     "# backup codes"
@@ -713,7 +668,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "inside-medicine",
    "metadata": {},
    "source": [
     "## 断点续上训练"
@@ -722,7 +676,6 @@
   {
    "cell_type": "code",
    "execution_count": 173,
-   "id": "minute-islam",
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +718,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "expensive-theology",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -796,7 +748,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
