--- a/pythonDemo/demo-numpy,pandas,argparse,traceback.ipynb
+++ b/pythonDemo/demo-numpy,pandas,argparse,traceback.ipynb
@@ -1358,7 +1358,7 @@
    "source": [
     "import traceback\n",
     "info = traceback.format_exc()\n",
-    "log(ERROR,f"Traceback : {info}")",
+    "log(ERROR,f'Traceback : {info}')",
    ]
   },
   {
