--- a/pythonDemo/demo-numpy,pandas,argparse,traceback.ipynb
+++ b/pythonDemo/demo-numpy,pandas,argparse,traceback.ipynb
@@ -1343,6 +1343,26 @@
     "tmp_data = pdData.read_csv(filePath,header=None)  # 默认是不读入index的，如果有且要读入的话，要设置index_col=0参数"
    ]
   },
+
+ {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 异常捕捉，traceback()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import traceback\n",
+    "info = traceback.format_exc()\n",
+    "log(ERROR,f'Traceback : {info}')"
+   ]
+  },
+
   {
    "cell_type": "markdown",
    "metadata": {},
